syntax = "proto3";

package warden.async.v1beta1;

import "gogoproto/gogo.proto";
import "tendermint/abci/types.proto";
import "warden/async/v1beta1/future.proto";

option go_package = "github.com/warden-protocol/wardenprotocol/warden/x/async/types/v1beta1";

message AsyncInjectedTx {
  // The results of the execution of the Futures.
  repeated FutureResult results = 1;
  // All the vote extensions gathered for this block.
  // TODO: slinky also does that, so technically we're duplicating information and wasting block space.
  repeated tendermint.abci.ExtendedVoteInfo extended_votes_info = 2 [(gogoproto.nullable) = false];
}

// A vote extension coming from a validator. It contains multiple votes for
// different Futures.
message AsyncVoteExtension {
  repeated AsyncVoteExtensionItem votes = 1;
}

message AsyncVoteExtensionItem {
  uint64 future_id = 1;
  FutureVoteType vote = 2;
}

